<resources>
    <string name="app_name">myAgilityTracker</string>
    <string name="btnDogList">Dog List</string>
    <string name="btnQualHist">Q Runs</string>
    <string name="btnCurrProgress">Current Progress</string>
    <string name="btnTitlesDone">Titles Completed</string>
    <string name="btnAddLocation">Add Location</string>
    <string name="TitleDogInfo">Dog Info:</string>
    <string name="TitleQInfo">Qual Info:</string>
    <string name="dog1">Luna</string>
    <string name="dog2">Sola</string>
    <string name="dog3">Cosmo</string>
    <string name="dog4">Usher</string>
    <string name="dog5">Mynx</string>
</resources>
