<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_main"
    tools:context=".MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnDogList"
        android:text="@string/btnDogList"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/btnQualList"
        />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnQualList"
        android:text="@string/btnQualHist"
        android:layout_above="@id/btnTitlesDone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/centerTemp"
        android:layout_toStartOf="@+id/centerTemp"
        />

    <TextView
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:id="@+id/centerTemp"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnTitlesProg"
        android:text="@string/btnCurrProgress"
        android:layout_above="@id/btnTitlesDone"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/centerTemp"
        android:layout_toEndOf="@+id/centerTemp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnTitlesDone"
        android:text="@string/btnTitlesDone"
        android:layout_marginBottom="100dp"
        android:layout_above="@+id/textDemoDesc"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textDemoDesc"
        android:text="( Relative Layout Demo )"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>